# manga-ocr-http

./: CHANGELOG.md  LICENSE  README.md  manga-ocr-http.cabal
app/: Main.hs
src/Manga/OCR/: Http.hs  Options.hs
